fix gaps on sides

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ img {
   "footer footer";
   grid-template-columns: 1fr 3fr;
   grid-gap: 20px;
+  max-width: 90%;
 }
 
 
@@ -58,7 +59,8 @@ aside {
   grid-area: sidebar;
   padding: 20px;
   margin: 0 auto;
-  max-width: 680px;
+  max-width: 800px;
+
  
 }
 
